--- a/teaching.html
+++ b/teaching.html
@@ -57,9 +57,7 @@ ul {
 	<div style="width: 85%; margin-left: auto; margin-right: auto;">
 		
 	<ul>
-        <li>Alvial Vásquez, Francisco-J. and Abarca-del-Río, Rodrigo and Ávila, Andrés I. (2020), <a href="https://www.frontiersin.org/articles/10.3389/feart.2020.519975/full">High-Resolution
-	Precipitation Gridded Dataset on the South-Central Zone (34° S–41° S) of Chile</a>, <a href="https://www.frontiersin.org/journals/earth-science#">
-	frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975</li>
+        <li><b>2020</b>:513421:<b>Geophysical Data Analysis</b> [in Spanish]. Department of Geophysics, Faculty of Sciences in Physical and Mathematical, University of Concepción, Concepción, Chile</li>
     </ul>
 	
 	<h3 style="color:white;"> Undergraduate thesis, as co-revisor </h3>
