--- a/teaching.html
+++ b/teaching.html
@@ -57,16 +57,17 @@ ul {
 	<div style="width: 85%; margin-left: auto; margin-right: auto;">
 		
 	<ul>
-        <li><b>2020</b>:513421:<b>Geophysical Data Analysis</b> [in Spanish]. Department of Geophysics, Faculty of Sciences in Physical and Mathematical, University of Concepción, Concepción, Chile</li>
-    </ul>
+        <li><b>2020</b>: 513421:<b> <a href="https://www.geofisica.udec.cl/syllabi/">Geophysical Data Analysis</a></b> [in Spanish]. Department of Geophysics, Faculty of Sciences in Physical and Mathematical, University of Concepción, Concepción, Chile.</li>
+	<li><b>2020</b>: 513313:<b> <a href="https://www.geofisica.udec.cl/syllabi/">Fluid mechanics</a></b> [in Spanish]. Department of Geophysics, Faculty of Sciences in Physical and Mathematical, University of Concepción, Concepción, Chile.</li>	
+  	<li><b>2020</b>: 242069:<b> Advanced GIS</b> [in Spanish]. <a href="http://ubiobio.cl/recursosnaturales/">Faculty of Sciences</a>, University of BÍO-BÍO, Chillán, Chile.</li>	
+	</ul>
 	
+		
 	<h3 style="color:white;"> Undergraduate thesis, as co-revisor </h3>
 	<div style="width: 85%; margin-left: auto; margin-right: auto;">
     <ul>
         <li>Alvial Vásquez, Francisco-J.;Abarca-del-Río, Rodrigo; Ávila, Andrés I. (2019). Construcción de una nueva climatología y base de datos de precipitación en alta resolución sobre la zona Centro-Sur de Chile
 		(34°S-41°S) obtenida mediante un proceso dinámico geoestadístico. 6to. Congreso de Oceanografía Física, Meteorología y Clima del Pacifico Sur Oriental, Puerto Montt, Chile.</li>
-	<li>Alvial Vásquez, Francisco-J; Abarca-del-Río, Rodrigo;Orrego Verdugo, Raúl Alejandro (2018). Set of high-resolution precipitation gridded data on the South-Central zone (34 • S-41 • S) of Chile. Southamerica water from space conference,
-		 Santiago, Chile.</li>
     </ul>
 </div>
 	
