--- a/teaching.html
+++ b/teaching.html
@@ -66,8 +66,9 @@ ul {
 	<h3 style="color:white;"> Undergraduate thesis, as co-revisor </h3>
 	<div style="width: 85%; margin-left: auto; margin-right: auto;">
     <ul>
-        <li>Alvial Vásquez, Francisco-J.;Abarca-del-Río, Rodrigo; Ávila, Andrés I. (2019). Construcción de una nueva climatología y base de datos de precipitación en alta resolución sobre la zona Centro-Sur de Chile
-		(34°S-41°S) obtenida mediante un proceso dinámico geoestadístico. 6to. Congreso de Oceanografía Física, Meteorología y Clima del Pacifico Sur Oriental, Puerto Montt, Chile.</li>
+        <li>Álvaro Esparza (2020). "Estimación de riesgo de ocurrencia de focos de incendios forestales en la zona centro sur de Chile a través
+		del modelo de regresión logística". thesis to qualify for the title of Engineer in natural resources. 
+	    <a href="http://ubiobio.cl/recursosnaturales/">Faculty of Sciences</a>, University of BÍO-BÍO, Chillán, Chile.</li>
     </ul>
 </div>
 	
