--- a/teaching.html
+++ b/teaching.html
@@ -57,13 +57,13 @@ ul {
 	<div style="width: 85%; margin-left: auto; margin-right: auto;">
 		
 	<ul>
-        <li><b>2020</b>: 513421:<b> <a href="https://www.geofisica.udec.cl/syllabi/">Geophysical Data Analysis</a></b> [in Spanish]. Department of Geophysics, Faculty of Sciences in Physical and Mathematical, University of Concepción, Concepción, Chile.</li>
-	<li><b>2020</b>: 513313:<b> <a href="https://www.geofisica.udec.cl/syllabi/">Fluid mechanics</a></b> [in Spanish]. Department of Geophysics, Faculty of Sciences in Physical and Mathematical, University of Concepción, Concepción, Chile.</li>	
+        <li><b>2020</b>: 513421:<b> <a href="https://www.geofisica.udec.cl/syllabi/">Geophysical Data Analysis</a></b> (collaborator) [in Spanish]. Department of Geophysics, Faculty of Sciences in Physical and Mathematical, University of Concepción, Concepción, Chile.</li>
+	<li><b>2020</b>: 513313:<b> <a href="https://www.geofisica.udec.cl/syllabi/">Fluid mechanics</a></b> (collaborator) [in Spanish]. Department of Geophysics, Faculty of Sciences in Physical and Mathematical, University of Concepción, Concepción, Chile.</li>	
   	<li><b>2020</b>: 242069:<b> Advanced GIS</b> [in Spanish]. <a href="http://ubiobio.cl/recursosnaturales/">Faculty of Sciences</a>, University of BÍO-BÍO, Chillán, Chile.</li>	
 	</ul>
 	
 		
-	<h3 style="color:white;"> Undergraduate thesis, as co-revisor </h3>
+	<h3 style="color:white;"> Undergraduate thesis, as co-reviewer </h3>
 	<div style="width: 85%; margin-left: auto; margin-right: auto;">
     <ul>
         <li>Álvaro Esparza (2020). "Estimación de riesgo de ocurrencia de focos de incendios forestales en la zona centro sur de Chile a través
