--- a/teaching.html
+++ b/teaching.html
@@ -59,7 +59,7 @@ ul {
 	<ul>
         <li><b>2020</b>: 513421:<b> <a href="https://www.geofisica.udec.cl/syllabi/">Geophysical Data Analysis</a></b> (collaborator) [in Spanish]. Department of Geophysics, Faculty of Sciences in Physical and Mathematical, University of Concepción, Concepción, Chile.</li>
 	<li><b>2020</b>: 513313:<b> <a href="https://www.geofisica.udec.cl/syllabi/">Fluid mechanics</a></b> (collaborator) [in Spanish]. Department of Geophysics, Faculty of Sciences in Physical and Mathematical, University of Concepción, Concepción, Chile.</li>	
-  	<li><b>2020</b>: 242069:<b> Advanced GIS</b> [in Spanish]. <a href="http://ubiobio.cl/recursosnaturales/">Faculty of Sciences</a>, University of BÍO-BÍO, Chillán, Chile.</li>	
+  	<li><b>2020</b>: 242069:<b> <a href="http://ubiobio.cl/recursosnaturales/Plan_de_Estudios/"> Advanced GIS</a></b> [in Spanish]. <a href="http://ubiobio.cl/recursosnaturales/">Faculty of Sciences</a>, University of BÍO-BÍO, Chillán, Chile.</li>	
 	</ul>
 	
 		
