--- a/research.html
+++ b/research.html
@@ -65,6 +65,8 @@ ul {
 	<h3 style="color:white;"> Conferences </h3>
 	<div style="width: 85%; margin-left: auto; margin-right: auto;">
     <ul>
+	<li>Alvial Vásquez, Francisco-J.;Abarca-del-Río, Rodrigo. (2021). Climatología en alta resolución para Campos de Hielo Norte de temperaturas extremas. 3er. Congreso SOCHICRI, Concepción, Chile. <a href="https://www.youtube.com/channel/UCJk-YTM6JBDIEZMG7LVAAEg">
+	Online</a></li>
         <li>Alvial Vásquez, Francisco-J.;Abarca-del-Río, Rodrigo; Ávila, Andrés I. (2019). Construcción de una nueva climatología y base de datos de precipitación en alta resolución sobre la zona Centro-Sur de Chile
 		(34°S-41°S) obtenida mediante un proceso dinámico geoestadístico. 6to. Congreso de Oceanografía Física, Meteorología y Clima del Pacifico Sur Oriental, Puerto Montt, Chile.</li>
 	<li>Alvial Vásquez, Francisco-J; Abarca-del-Río, Rodrigo;Orrego Verdugo, Raúl Alejandro (2018). Set of high-resolution precipitation gridded data on the South-Central zone (34 • S-41 • S) of Chile. Southamerica water from space conference,
